# Dash_Financeiro

./: 01_coleta.py  02_tratamento_e_disponibilizacao.py  03_remocao_arquivos.py  README.md  cad_cia_aberta.csv  instrucoes_dash_py.txt  pyproject.toml
.github/workflows/: update.yaml
Dashboard/: app.py
Dashboard/rsconnect-python/: Dashboard.json
