[tool.poetry]
name = "dash-financeiro"
version = "0.1.0"
description = "\"DashBoard analise de demonstrativo financeiro - Analise Macro\""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "dash_financeiro"}]

[tool.poetry.dependencies]
python = "~3.9"
wget = "^3.2"
numpy = "^1.25.0"
pandas = "^2.0.2"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
